--- a/assest/css/weather-style.css
+++ b/assest/css/weather-style.css
@@ -282,7 +282,7 @@ body {
 }
 .body-2 {
   font-size: var(--body-2);
-  font-weight: var(--weight-semiBold);
+  font-weight: var (--weight-semiBold);
 }
 .body-3 {
   font-size: var(--body-3);
@@ -361,6 +361,7 @@ body {
   clip-path: circle(130% at 73% 5%);
   height: 100%;
 }
+
 .search-wrapper {
   position: relative;
   -webkit-border-after: 1px solid var(--outline);
@@ -462,535 +463,69 @@ body {
   box-shadow: none;
 }
 
-/* main */
-
-main {
-  height: calc(100vh - 80px);
-  height: calc(100svh - 80px);
-  /* overflow: hidden; */
+.search-wrapper:has(.searching)::before {
+  display: block;
 }
-article.container {
-  position: relative;
-  display: grid;
-  grid-template-columns: minmax(0, 1fr);
-  gap: 20px;
+.search-field {
+  height: 80px;
+  line-height: 80px;
+  padding-inline: 56px 16px;
+  outline: none;
 }
-article.container::-webkit-scrollbar-thumb {
-  background-color: transparent;
+.search-field::-webkit-input-placeholder {
+  color: var(--on-surface-variant-2);
 }
-article.container:is(:hover, :focus-within)::-webkit-scrollbar-thumb {
-  background-color: var(--white-alpha-8);
+.search-field::-moz-placeholder {
+  color: var(--on-surface-variant-2);
 }
-article.container::-webkit-scrollbar-thumb {
-  height: 10px;
+.search-field:-ms-input-placeholder {
+  color: var(--on-surface-variant-2);
 }
-article.container::before {
-  content: "";
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 40px;
-  background-image: var(--gradient-1);
-  pointer-events: none;
-  z-index: 1;
+.search-field::-ms-input-placeholder {
+  color: var(--on-surface-variant-2);
 }
-.section:not(:last-child) {
-  -webkit-margin-after: 16px;
-  margin-block-end: 16px;
+.search-field::placeholder {
+  color: var(--on-surface-variant-2);
 }
-/* current-weather-card */
-.current-weather-card .weapper {
-  margin-block: 12px;
-  display: flex;
-  gap: 8px;
-  align-items: center;
-}
-.current-weather-card .weather-icon {
-  margin-inline: auto;
-}
-.current-weather-card > .body-3 {
-  text-transform: capitalize;
-}
-.current-weather-card .meta-list {
-  -webkit-margin-before: 16px;
-  margin-block-start: 16px;
-  -webkit-padding-before: 16px;
-  padding-block-start: 16px;
-  -webkit-border-before: 1px solid var(--outline);
-  border-block-start: 1px solid var(--outline);
-}
-.current-weather-card .meta-item {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-.current-weather-card .meta-item:not(:last-child) {
-  -webkit-margin-after: 12px;
-  margin-block-end: 12px;
-}
-.current-weather-card .meta-text {
-  color: var(--on-surface-variant);
-}
-
-/* highlights */
-
-.forecast-card .title-2 {
-  -webkit-margin-after: 0;
-  margin-block-end: 0;
-}
-.forecast-card :is(.card-item, .icon-wrapper) {
-  display: flex;
-  align-items: center;
-}
-.forecast-card .card-item:not(:last-child) {
-  -webkit-margin-after: 12px;
-  margin-block-end: 12px;
-}
-.forecast-card .icon-wrapper {
-  gap: 8px;
-}
-.forecast-card .label-1 {
-  color: var(--on-surface-variant);
-  font-weight: var(--weight-semiBold);
-}
-.forecast-card .card-item > .label-1 {
-  width: 100%;
-  text-align: right;
-}
-
-/* highlights */
-
-.highlights .m-icon {
-  font-size: 3.2rem;
-}
-.highlight-list {
-  display: grid;
-  gap: 20px;
-}
-.highlight-list .title-3 {
-  color: var(--on-surface-variant);
-  -webkit-margin-after: 20px;
-  margin-block-end: 20px;
-}
-.highlights .card-sm {
-  background-color: var(--black-alpha-10);
-  position: relative;
-}
-.highlight-card :is(.wrapper, .card-list, .card-item) {
-  display: flex;
-  align-items: center;
-}
-.highlight-card .wrapper {
-  justify-content: space-between;
-  gap: 16px;
-}
-.highlight-card .card-list {
-  flex-wrap: wrap;
-  flex-grow: 1;
-  row-gap: 8px;
-}
-.highlight-card .card-item {
-  width: 50%;
-  justify-content: flex-end;
-  gap: 4px;
-}
-.highlight-card .label-1 {
-  color: var(--on-surface-variant);
-}
-.badge {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  padding: 2px 12px;
-  border-radius: var(--radius-pill);
-  font-weight: var(--weight-semiBold);
-  cursor: help;
-}
-.badge.aqi-1 {
-  background-color: var(--bg-aqi-1);
-  color: var(--on-bg-aqi-1);
-}
-.badge.aqi-2 {
-  background-color: var(--bg-aqi-2);
-  color: var(--on-bg-aqi-2);
-}
-.badge.aqi-3 {
-  background-color: var(--bg-aqi-3);
-  color: var(--on-bg-aqi-3);
-}
-.badge.aqi-4 {
-  background-color: var(--bg-aqi-4);
-  color: var(--on-bg-aqi-4);
-}
-.badge.aqi-5 {
-  background-color: var(--bg-aqi-5);
-  color: var(--on-bg-aqi-5);
-}
-.highlight-card.two .card-item {
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  gap: 8px 16px;
-}
-.highlight-card.two .label-1 {
-  -webkit-margin-after: 4px;
-  margin-block-end: 4px;
-}
-
-/* hourly forecast */
-
-.slider-container {
-  overflow-x: auto;
-  margin-inline: -16px;
-}
-.slider-container::-webkit-scrollbar {
+.search-field::-webkit-search-cancel-button {
   display: none;
 }
-.slider-list {
-  display: flex;
-  gap: 12px;
-}
-.slider-list:first-child {
-  -webkit-margin-after: 16px;
-  margin-block-end: 16px;
-}
-.slider-list::before,
-.slider-list::after {
-  content: "";
-  min-width: 4px;
-}
-.slider-item {
-  min-width: 110px;
-  flex: 1 1 100%;
-}
-.slider-card {
-  text-align: center;
-}
-.slider-item .weather-icon {
-  margin-inline: auto;
-  margin-block: 12px;
-}
-
-/* footer */
-
-.footer,
-footer .body-3:last-child {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.footer {
-  color: var(--on-surface-variant);
-  text-align: center;
-  gap: 12px 24px;
-  -webkit-margin-before: 28px;
-  margin-block-start: 28px;
-}
-.fade-in .footer {
-  display: flex;
-}
-.footer .body-3:last-child {
-  gap: 6px;
-}
-.footer a {
-  display: inline;
-}
-.footer p:last-child {
-  display: inline;
-}
-
-/* loading */
-
-.loading {
+.search-wrapper .leading-icon {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--background);
-  place-items: center;
-  z-index: 1;
-  overflow: hidden;
-  display: none;
-}
-.loading::before {
-  content: "";
-  width: 48px;
-  height: 48px;
-  border: 4px solid var(--on-background);
-  border-block-start-color: transparent;
-  border-radius: var(--radius-circle);
-  -webkit-animation: loading 500ms linear infinite;
-  animation: loading 500ms linear infinite;
-  position: fixed;
   top: 50%;
+  left: 28px;
+  transform: translate(-50%, -50%);
 }
-
-/* ERROR */
-
-.error-content {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  height: 100svh;
-  background-color: var(--background);
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 8;
+.search-wrapper > .m-icon {
   display: none;
 }
-.error-content .btn-primary {
-  -webkit-margin-before: 20px;
-  margin-block-start: 20px;
+.search-wrapper .icon-btn {
+  background-color: transparent;
+  box-shadow: none;
 }
-
-/* media queries */
-
-/* Media Queries */
-@media (min-width: 768px) {
-  /* reused */
-  .container {
-    padding: 24px;
-  }
-  .title-1 {
-    --title-1: 2.4rem;
-  }
-  .section > .title-2 {
-    -webkit-margin-after: 16px;
-    margin-block-end: 16px;
-  }
-  .card-lg {
-    padding: 24px;
-  }
-  .card-sm {
-    padding: 20px;
-    display: grid;
-    /* grid-template-columns: min-content 1fr; */
-  }
-  .badge {
-    top: 20px;
-    right: 20px;
-  }
-
-  /* header */
-
-  .header-actions {
-    gap: 24px;
-  }
-  .header .btn-primary {
-    padding-inline: 16px 24px;
-  }
-  .header .btn-primary .span {
-    display: block;
-  }
-  .search-view {
-    -webkit-clip-path: circle(3% at calc(100% - 273px) 6%);
-    clip-path: circle(3% at calc(100% - 273px) 6%);
-  }
-
-  /* main */
-
-  main {
-    height: calc(100vh - 96px);
-    height: calc(100svh - 96px);
-  }
-  article.container {
-    -webkit-padding-before: 0;
-    padding-block-start: 0;
-    grid-template-columns: 280px minmax(0, 1fr);
-    align-items: flex-start;
-    gap: 24px;
-  }
-  .content-left {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-  }
-  .section:not(:last-child) {
-    margin-block: 20px;
-  }
-  .forecast-card .card-item:not(:last-child) {
-    -webkit-margin-after: 16px;
-    margin-block-end: 16px;
-  }
-  .highlight-list {
-    grid-template-columns: 1fr 1fr;
-  }
-  .highlight-card:nth-child(-n + 2) {
-    grid-column: span 2;
-    height: 160px;
-  }
-  .highlight-card:nth-child(n + 3) {
-    height: 120px;
-  }
-  .highlights .m-icon {
-    font-size: 3.6rem;
-  }
-  .highlight-card.one .card-item {
-    width: 25%;
-    flex-direction: column-reverse;
-    gap: 8px;
-  }
-  .slider-container {
-    margin-inline: 0 -24px;
-    border-bottom-left-radius: var(--radius-16);
-    border-top-left-radius: var(--radius-16);
-  }
-  .slider-container::before {
-    display: none;
-  }
-  .slider-container::after {
-    min-width: 12px;
-  }
-  .hourly-forecast .card-sm {
-    padding: 16px;
-  }
+.search-view .view-list {
+  padding-block: 8px 16px;
 }
-
-@media (min-width: 1200px) {
-  :root {
-    --headign: 8rem;
-    --title-2: 2rem;
-  }
-  /* reused */
-  .container {
-    padding: 40px;
-  }
-  .title-1 {
-    --title-1: 2.6rem;
-  }
-  .card-lg {
-    padding: 36px;
-  }
-  .card-sm {
-    padding: 24px;
-  }
-  .highlight-card.two .card-item {
-    -moz-column-gap: 24px;
-    column-gap: 24px;
-  }
-
-  /* header */
-
-  .header .icon-btn {
-    display: none;
-  }
-  .logo img {
-    width: 200px;
-  }
-  .header {
-    position: relative;
-    height: 120px;
-    z-index: 4;
-  }
-  .header .container {
-    padding-block: 0;
-    height: 100%;
-  }
-  .header .btn-primary {
-    padding-inline: 16px 24px;
-  }
-  .header .btn-primary .span {
-    display: block;
-  }
-  .search-view,
-  .search-view.active {
-    all: unset;
-    display: block;
-    position: relative;
-    width: 500px;
-    -webkit-animation: none;
-    animation: none;
-  }
-  .search-wrapper {
-    -webkit-border-after: none;
-    border-block-end: none;
-  }
-  .search-wrapper > .m-icon {
-    display: block;
-  }
-  .search-field,
-  .search-view .view-list {
-    background-color: var (--surface);
-  }
-  .search-field {
-    height: 56px;
-    border-radius: var(--radius-28);
-  }
-  .search-result,
-  .search-view:not(:focus-within) .search-result {
-    display: none;
-  }
-  .search-result,
-  .search-view:not(:focus-within) .search-result.active {
-    display: block;
-  }
-  .search-view:has(.search-result):focus-within .search-field {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-  }
-  .search-view .view-list {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    max-height: 360px;
-    border-radius: 0 0 var(--radius-28) var (--radius-28);
-    -webkit-border-before: 1px solid var(--outline);
-    border-block-start: 1px solid var(--outline);
-    overflow-y: auto;
-    overflow-y: overlay;
-  }
-  .search-view .view-list:empty {
-    min-height: 120px;
-  }
-  .search-view .view-list::-webkit-scrollbar-button {
-    height: 20px;
-  }
-  .search-view:is(:hover, :has(.view-list):hover) {
-    -webkit-filter: drop-shadow(var(--shadow-1));
-    filter: drop-shadow(var(--shadow-1));
-  }
-  .search-view:is(:focus-within, :has(.view-list):focus-within) {
-    -webkit-filter: drop-shadow(var(--shadow-2));
-    filter: drop-shadow(var(--shadow-2));
-  }
-
-  /* main */
-
-  main {
-    height: calc(100vh - 120px);
-    height: calc(100svh - 120px);
-  }
-  article.container {
-    -webkit-padding-before: 0;
-    padding-block-start: 0;
-    grid-template-columns: 360px minmax(0, 1fr);
-    gap: 40px;
-  }
-  .current-weather .weather-icon {
-    width: 80px;
-  }
-  .forecast-card .title-2 {
-    --title-2: 2.2rem;
-  }
-  .highlight-card:nth-child(-n + 2) {
-    height: 200px;
-  }
-  .highlight-card:nth-child(n + 3) {
-    height: 150px;
-  }
-  .highlight-card .m-icon {
-    font-size: 4rem;
-  }
-  .slider-list {
-    gap: 16px;
-  }
+.view-item .m-icon,
+.item-subtitle {
+  color: var(--on-surface-variant);
+}
+.search-view .view-item {
+  position: relative;
+  height: 56px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 16px;
+  padding-inline: 16px 24px;
+}
+.search-view .view-item:is(.m-icon, .item-subtitle) {
+  color: var(--on-surface-variant);
+}
+.search-view .view-item .item-link {
+  position: absolute;
+  inset: 0;
+  box-shadow: none;
 }
 
 /* Settings Modal */
@@ -1113,6 +648,246 @@ input:checked + .toggle-slider:before {
   color: var(--on-surface);
 }
 
+/* Media Queries */
+@media (min-width: 768px) {
+  /* reused */
+  .container {
+    padding: 24px;
+  }
+  .title-1 {
+    --title-1: 2.4rem;
+  }
+  .section > .title-2 {
+    -webkit-margin-after: 16px;
+    margin-block-end: 16px;
+  }
+  .card-lg {
+    padding: 24px;
+  }
+  .card-sm {
+    padding: 20px;
+    display: grid;
+    /* grid-template-columns: min-content 1fr; */
+  }
+  .badge {
+    top: 20px;
+    right: 20px;
+  }
+
+  /* header */
+
+  .header-actions {
+    gap: 24px;
+  }
+  .header .btn-primary {
+    padding-inline: 16px 24px;
+  }
+  .header .btn-primary .span {
+    display: block;
+  }
+  .search-view {
+    -webkit-clip-path: circle(3% at calc(100% - 273px) 6%);
+    clip-path: circle(3% at calc(100% - 273px) 6%);
+  }
+
+  /* main */
+
+  main {
+    height: calc(100vh - 96px);
+    height: calc(100svh - 96px);
+  }
+  article.container {
+    -webkit-padding-before: 0;
+    padding-block-start: 0;
+    grid-template-columns: 280px minmax(0, 1fr);
+    align-items: flex-start;
+    gap: 24px;
+  }
+  .content-left {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+  }
+  .section:not(:last-child) {
+    margin-block: 20px;
+  }
+  .forecast-card .card-item:not(:last-child) {
+    -webkit-margin-after: 16px;
+    margin-block-end: 16px;
+  }
+  .highlight-list {
+    grid-template-columns: 1fr 1fr;
+  }
+  .highlight-card:nth-child(-n + 2) {
+    grid-column: span 2;
+    height: 160px;
+  }
+  .highlight-card:nth-child(n + 3) {
+    height: 120px;
+  }
+  .highlights .m-icon {
+    font-size: 3.6rem;
+  }
+  .highlight-card.one .card-item {
+    width: 25%;
+    flex-direction: column-reverse;
+    gap: 8px;
+  }
+  .slider-container {
+    margin-inline: 0 -24px;
+    border-bottom-left-radius: var(--radius-16);
+    border-top-left-radius: var(--radius-16);
+  }
+  .slider-container::before {
+    display: none;
+  }
+  .slider-container::after {
+    min-width: 12px;
+  }
+  .hourly-forecast .card-sm {
+    padding: 16px;
+  }
+}
+@media (min-width: 1200px) {
+  :root {
+    --headign: 8rem;
+    --title-2: 2rem;
+  }
+  /* reused */
+  .container {
+    padding: 40px;
+  }
+  .title-1 {
+    --title-1: 2.6rem;
+  }
+  .card-lg {
+    padding: 36px;
+  }
+  .card-sm {
+    padding: 24px;
+  }
+  .highlight-card.two .card-item {
+    -moz-column-gap: 24px;
+    column-gap: 24px;
+  }
+
+  /* header */
+
+  .header .icon-btn {
+    display: none;
+  }
+  .logo img {
+    width: 200px;
+  }
+  .header {
+    position: relative;
+    height: 120px;
+    z-index: 4;
+  }
+  .header .container {
+    padding-block: 0;
+    height: 100%;
+  }
+  .header .btn-primary {
+    padding-inline: 16px 24px;
+  }
+  .header .btn-primary .span {
+    display: block;
+  }
+  .search-view,
+  .search-view.active {
+    all: unset;
+    display: block;
+    position: relative;
+    width: 500px;
+    -webkit-animation: none;
+    animation: none;
+  }
+  .search-wrapper {
+    -webkit-border-after: none;
+    border-block-end: none;
+  }
+  .search-wrapper > .m-icon {
+    display: block;
+  }
+  .search-field,
+  .search-view .view-list {
+    background-color: var(--surface);
+  }
+  .search-field {
+    height: 56px;
+    border-radius: var(--radius-28);
+  }
+  .search-result,
+  .search-view:not(:focus-within) .search-result {
+    display: none;
+  }
+  .search-result,
+  .search-view:not(:focus-within) .search-result.active {
+    display: block;
+  }
+  .search-view:has(.search-result):focus-within .search-field {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+  .search-view .view-list {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    max-height: 360px;
+    border-radius: 0 0 var(--radius-28) var(--radius-28);
+    -webkit-border-before: 1px solid var(--outline);
+    border-block-start: 1px solid var(--outline);
+    overflow-y: auto;
+    overflow-y: overlay;
+  }
+  .search-view .view-list:empty {
+    min-height: 120px;
+  }
+  .search-view .view-list::-webkit-scrollbar-button {
+    height: 20px;
+  }
+  .search-view:is(:hover, :has(.view-list):hover) {
+    -webkit-filter: drop-shadow(var(--shadow-1));
+    filter: drop-shadow(var(--shadow-1));
+  }
+  .search-view:is(:focus-within, :has(.view-list):focus-within) {
+    -webkit-filter: drop-shadow(var(--shadow-2));
+    filter: drop-shadow(var(--shadow-2));
+  }
+
+  /* main */
+
+  main {
+    height: calc(100vh - 120px);
+    height: calc(100svh - 120px);
+  }
+  article.container {
+    -webkit-padding-before: 0;
+    padding-block-start: 0;
+    grid-template-columns: 360px minmax(0, 1fr);
+    gap: 40px;
+  }
+  .current-weather .weather-icon {
+    width: 80px;
+  }
+  .forecast-card .title-2 {
+    --title-2: 2.2rem;
+  }
+  .highlight-card:nth-child(-n + 2) {
+    height: 200px;
+  }
+  .highlight-card:nth-child(n + 3) {
+    height: 150px;
+  }
+  .highlight-card .m-icon {
+    font-size: 4rem;
+  }
+  .slider-list {
+    gap: 16px;
+  }
+}
 @media (min-width: 1400px) {
   .highlight-list {
     grid-template-columns: repeat(4, 1fr);
